Closed
Bug 1615465
Opened 5 years ago
Closed 5 years ago
Missing nsString include in GLContext
Categories
(Core :: Graphics, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox75 | --- | fixed |
People
(Reporter: val, Assigned: val)
Details
Attachments
(1 file)
Looks like a string include is missing in GLContext
, for the ns(A)CString
usage in the file..
8:41.87 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceDMABUF.cpp:6:
8:41.87 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceDMABUF.h:10:
8:41.87 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/mozilla/widget/WaylandDMABufSurface.h:11:
8:41.87 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContext.h:3734:12: error: implicit instantiation of undefined template 'nsTSubstring<char>'
8:41.87 if (str.Equals(markStrList[i])) {
8:41.87 ^
8:41.87 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/nsStringFwd.h:29:7: note: template is declared here
8:41.87 class nsTSubstring;
8:41.87 ^
8:41.87 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceDMABUF.cpp:6:
8:41.87 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceDMABUF.h:9:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurface.h:18:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/queue:3:
8:41.88 In file included from /usr/include/c++/v1/queue:189:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/deque:52:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/deque:3:
8:41.88 In file included from /usr/include/c++/v1/deque:162:
8:41.88 In file included from /usr/include/c++/v1/__split_buffer:7:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/algorithm:52:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/algorithm:3:
8:41.88 In file included from /usr/include/c++/v1/algorithm:643:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/memory:52:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/memory:3:
8:41.88 In file included from /usr/include/c++/v1/memory:659:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/iterator:52:
8:41.88 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/iterator:3:
8:41.88 /usr/include/c++/v1/iterator:1412:9: error: implicit instantiation of undefined template 'nsTString<char>'
8:41.88 ++__i;
8:41.88 ^
8:41.89 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContext.h:3747:58: note: in instantiation of member function 'std::__1::__wrap_iter<const nsTString<char> *>::operator++' requested here
8:41.89 for (auto itr = strList.begin(); itr != strList.end(); ++itr) {
8:41.89 ^
8:41.89 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/nsStringFwd.h:33:7: note: template is declared here
8:41.89 class nsTString;
8:41.89 ^
8:41.89 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceDMABUF.cpp:6:
8:41.89 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceDMABUF.h:10:
8:41.89 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/mozilla/widget/WaylandDMABufSurface.h:11:
8:41.89 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContext.h:3748:23: error: implicit instantiation of undefined template 'nsTSubstring<char>'
8:41.89 const nsACString& str = *itr;
8:41.89 ^
8:41.89 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/nsStringFwd.h:29:7: note: template is declared here
8:41.89 class nsTSubstring;
8:41.89 ^
8:42.22 BUILDSTATUS BUILD_VERBOSE ipc/ipdl
8:43.62 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceGLX.cpp:10:
8:43.62 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContextGLX.h:10:
8:43.62 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContext.h:3734:12: error: implicit instantiation of undefined template 'nsTSubstring<char>'
8:43.62 if (str.Equals(markStrList[i])) {
8:43.62 ^
8:43.62 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/nsStringFwd.h:29:7: note: template is declared here
8:43.62 class nsTSubstring;
8:43.62 ^
8:43.62 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceGLX.cpp:6:
8:43.62 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceGLX.h:9:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurface.h:18:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/queue:3:
8:43.63 In file included from /usr/include/c++/v1/queue:189:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/deque:52:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/deque:3:
8:43.63 In file included from /usr/include/c++/v1/deque:162:
8:43.63 In file included from /usr/include/c++/v1/__split_buffer:7:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/algorithm:52:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/algorithm:3:
8:43.63 In file included from /usr/include/c++/v1/algorithm:643:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/memory:52:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/memory:3:
8:43.63 In file included from /usr/include/c++/v1/memory:659:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/stl_wrappers/iterator:52:
8:43.63 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/system_wrappers/iterator:3:
8:43.63 /usr/include/c++/v1/iterator:1412:9: error: implicit instantiation of undefined template 'nsTString<char>'
8:43.63 ++__i;
8:43.63 ^
8:43.63 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContext.h:3747:58: note: in instantiation of member function 'std::__1::__wrap_iter<const nsTString<char> *>::operator++' requested here
8:43.63 for (auto itr = strList.begin(); itr != strList.end(); ++itr) {
8:43.63 ^
8:43.64 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/nsStringFwd.h:33:7: note: template is declared here
8:43.64 class nsTString;
8:43.64 ^
8:43.64 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/SharedSurfaceGLX.cpp:10:
8:43.64 In file included from /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContextGLX.h:10:
8:43.64 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/gfx/gl/GLContext.h:3748:23: error: implicit instantiation of undefined template 'nsTSubstring<char>'
8:43.64 const nsACString& str = *itr;
8:43.64 ^
8:43.64 /usr/home/greg/src/hg.mozilla.org/mozilla-unified/obj-x86_64-unknown-freebsd13.0/dist/include/nsStringFwd.h:29:7: note: template is declared here
8:43.64 class nsTSubstring;
8:43.64 ^
Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → greg
Updated•5 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/118ce2f460fc
fix missing nsString include in GLContext r=aosmond
Comment 4•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Assignee | ||
Comment 5•5 years ago
|
||
(In reply to Andrew Osmond [:aosmond] from comment #3)
Do you know if this needs to be uplifted to beta?
Nah probably not.
Flags: needinfo?(greg)
You need to log in
before you can comment on or make changes to this bug.
Description
•