Bug 1615465 - fix missing nsString include in GLContext r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D62843

--HG--
extra : moz-landing-system : lando